<resources>
    <string name="app_name">Fintastics</string>

    <!-- Splash Screen-->
    <string name="splash_image">splash_image</string>

    <!-- Choose Account Screen-->
    <string name="account_image">account_image</string>
    <string name="create_account">Create Account</string>
    <string name="select_your_account_type">Select Your Account Type</string>
    <string name="personal_account">Personal Account</string>
    <string name="family_account">Family Account</string>
    <string name="cam_storage_permissions"><![CDATA[Allow Camera & Storage Permmsions]]></string>
    <string name="camera_storage_permissions_app_data"><![CDATA[Allow Camera & Storage Permissions in App Info Page]]></string>

    <!-- Login Screen-->
    <string name="sign_in">Sign In</string>
    <string name="username">Name</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="referralcode">Referral Code</string>
    <string name="verifycode">Verify Code</string>
    <string name="verify_email">Verify email</string>
    <string name="login">Login</string>
    <string name="create_an_account"><u>Create An Account</u></string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>

    <!-- SignIn Screen-->
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>

    <!-- SelectFamilyMembersActivity Screen-->
    <string name="select_your_family_members">Select Your Family Members</string>
    <string name="no_data_found">No Data Found</string>
    <string name="next_step">Next Step</string>
    <string name="family_members">Family Members</string>

    <!-- SetProfile Screen-->
    <string name="set_profile_for_your_family">Set Profile For Your Family</string>
    <string name="set_profile">Set Profile</string>

    <!-- Create Profile Screen-->
    <string name="update">Update</string>
    <string name="first_name">First Name</string>
    <string name="user_name">User Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email ID</string>
    <string name="contact_no">Contact Number</string>
    <string name="dob">Date Of Birth</string>



    <!-- Common Attr-->
    <string name="title">Header Title</string>
    <string name="share">Share</string>
    <string name="share_the_app_link_to_your_family_members">Share The App Link To Your Family Members</string>
    <string name="all">All</string>
    <string name="select_member">select member</string>
    <string name="sucessfully_link_is_shared">Successfully Link is Shared</string>
    <string name="sign_in_sign_up_through_the_link">Sign In / Sign Up Through The Link</string>
    <string name="arrow_image">arrow_image</string>
    <string name="customer_care">Customer Care</string>
    <string name="income_report">Income Report</string>
    <string name="expenditure_report">Expenditure Report</string>
    <string name="transaction_report">Transaction Report</string>
    <string name="movement_list">Movement List</string>
    <string name="account_summary">Account Summary</string>
    <string name="change_password">Change Password</string>
    <string name="budgetary">Budgetary</string>
    <string name="chat">Chat</string>
    <string name="exsisting_password">Exsisting Password</string>
    <string name="enter_existing_password">Enter Existing Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="enter_confirm_new_password">Enter Confirm New Password</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="are_you_sure_you_want_to_block">Are you sure you want to block user?</string>
    <string name="are_you_sure_you_want_to_unblock">Are you sure you want to unblock user?</string>
    <string name="on_date">On Date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="transaction_on_type">Transaction on Type</string>
    <string name="select_month">Select Month</string>
    <string name="select_year">Select Year</string>
    <string name="select_transaction_type">Select Transaction Type</string>
    <string name="total_credit">Total Credit</string>
    <string name="added_credit">Added Credit</string>
    <string name="_333_27">0</string>
    <string name="_108_4">0</string>
    <string name="deducted_credit">Deducted Credit</string>
    <string name="_225_87">0</string>
    <string name="sno">S.No</string>
    <string name="dated">Dated</string>
    <string name="added">Added</string>
    <string name="deduted">Deduted</string>
    <string name="_0_36">0.36</string>
    <string name="_23_march_2021">date</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="balance_999_00">Balance : 00.00</string>
    <string name="_5837_00">00.00 -</string>
    <string name="_0_00">0.00 +</string>
    <string name="_00_00">0.00</string>


    <string name="_5837_00_color"><font fgcolor="#191B1B">5837.00</font>
    <font fgcolor="#FF2115">-</font></string>


    <string name="_0_00_color"><font fgcolor="#191B1B">0.00</font>
    <font fgcolor="#2CCE7B">+</font></string>
    <string name="settings">Settings</string>
    <string name="_567_00">$567,00</string>
    <string name="send">Send</string>
    <string name="pay">Pay</string>
    <string name="change">Change</string>
    <string name="borrow">Borrow</string>
    <string name="expenses">EXPENSES</string>
    <string name="_898_00">-$898,00</string>
    <string name="s_no">S.No</string>
    <string name="date">Date</string>
    <string name="_27_jun">27 Jun</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="card">Card</string>
    <string name="description">Description</string>
    <string name="salary">Salary</string>
    <string name="credit">Credit</string>
    <string name="_0_00_wtplus">0.00</string>
    <string name="debit">Debit</string>
    <string name="_1500_00">1500.00</string>
    <string name="balance">Balance</string>
    <string name="_43385_00">0</string>
    <string name="cedint_rent">Cedint rent</string>
    <string name="_498_10">-$498,10</string>
    <string name="father">Father</string>
    <string name="other">Other</string>
    <string name="mother">Mother</string>
    <string name="create_profile">Create Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="share_link">Share Link</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="daily">Daily</string>
    <string name="_24th_july">24th July</string>
    <string name="semicolon">:</string>
    <string name="seems_there_is_a_connectivity_issue_please_check_your_internet_connection_and_try_again">Seems there is a connectivity issue. Please check your internet connection and try again</string>
    <string name="back_to_login">Back to login?</string>
    <string name="payment_type">Payment Type</string>
    <string name="date_of_transaction">Date Of Transaction</string>
    <string name="amount">Amount</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="dd">DD</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="err_msg_type_of_paymenttype">Please select payment type</string>
    <string name="err_msg_type_of_transactiontype">Please select transaction type</string>
    <string name="err_msg_type_of_desctype">Please select Description</string>
    <string name="err_msg_type_of_month">Please select month</string>
    <string name="err_msg_type_of_year">Please select year</string>
    <string name="no_new_transactions_are_available">No new transactions are available</string>
    <string name="typeyourmessage">Type Your Message</string>
    <string name="my_group">My Group</string>
    <string name="available_balance">Available Balance</string>
    <string name="tabperiod">Periodic</string>
    <string name="tabonetime">One Time</string>
    <string name="make_periodic_budget">Make Periodic Budget</string>
    <string name="image">Image</string>
    <string name="keeping_your_business_organized_and_under_control_is_easy_with_budgets">Keeping your business organized and under control is easy with budgets</string>
    <string name="make_one_time_budget">Make One Time Budget</string>
    <string name="use_the_one_time_budget_on_special_occasions_vacation_christmas_or_reconstitution_in_order_to_stay_on_track">Use The One-Time Budget On Special Occasions Vacation, Christmas Or Reconstitution In Order To Stay On Track</string>
    <string name="this_month">This Month</string>
    <string name="food">Food</string>
    <string name="expenses_0_50000">Expenses 0/50000 ₹</string>
    <string name="show_more">show more</string>
    <string name="records">Records</string>
    <string name="overview">Overview</string>
    <string name="total_spent">Total Spent</string>
    <string name="spend_by_categories">Spend By Categories</string>
    <string name="march">March</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="period">Period</string>
    <string name="account">Account</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="currency">Currency</string>
    <string name="start_date">Start Date</string>
    <string name="enddate">End Date</string>
    <string name="categories">Categories</string>
    <string name="budget_overspent">Budget Overspent</string>
    <string name="notify_when_amount_has_exceeded_the_budgey">Notify when amount has exceeded the budgey</string>
    <string name="select_categories">Select Categories</string>
    <string name="annually">Annually</string>
    <string name="active">Active</string>
    <string name="closxed">Closed</string>


    <string-array name="array_name">
        <item>Select</item>
        <item>Income</item>
        <item>Expenditure</item>
    </string-array>

    <string-array name="array_paymentypename">
        <item>Select Payment Type</item>
        <item>Income</item>
        <item>Expense</item>
    </string-array>

    <string-array name="array_monthslist">
        <item>Select Month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>


</resources>