<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group
        android:id="@+id/group1">
        <item android:id="@+id/nav_item_one"
            android:icon="@drawable/icn_budgetary"
            android:title="@string/add_transaction"/>
        <item android:id="@+id/nav_item_two"
            android:icon="@drawable/icn_income_report"
            android:title="@string/income_report"/>


        <item android:id="@+id/nav_item_three"
            android:icon="@drawable/icn_expenditure_report"
            android:title="@string/expenditure_report" />

        <item android:id="@+id/nav_item_four"
        android:icon="@drawable/icn_transaction_report"
        android:title="@string/transaction_report" />

        <item android:id="@+id/nav_item_five"
            android:icon="@drawable/icn_movement_list"
            android:title="@string/movement_list"
            />

    <item android:id="@+id/nav_item_six"
        android:icon="@drawable/icn_account_summary"
        android:title="@string/account_summary"
        />
    </group>

    <group android:id="@+id/group2"
        >

        <item
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings"
            android:enabled="true"
            >

            <menu>

                <item
                    android:id="@+id/nav_item_ten"
                    android:icon="@drawable/icn_family"
                    android:title="@string/edit_profile"
                    />

                <item android:id="@+id/nav_item_seven"
                    android:icon="@drawable/icn_change_password"
                    android:title="@string/change_password"
                   />

                <item
                    android:id="@+id/nav_item_eight"
                    android:icon="@drawable/icn_budgetary"
                    android:title="@string/budgetary"
                   />

                <item
                    android:id="@+id/nav_item_nine"
                    android:icon="@drawable/icn_chat_icon"
                    android:title="@string/chat"
                    />

                <item
                    android:id="@+id/nav_item_eleventh"
                    android:icon="@drawable/logout"
                    android:title="@string/logout"
                    />

            </menu>

        </item>

        </group>

</menu>