<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_10dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_20dp"
        app:cardCornerRadius="@dimen/_10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_corner_bg_white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5dp"
                android:layout_marginLeft="@dimen/_5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_lbl_sno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/s_no"
                    android:textColor="@color/txt_black"
                    android:textSize="@dimen/_14sp" />

                <TextView
                    android:id="@+id/txt_sno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="end"
                    android:text="@string/_1"
                    android:textColor="@color/txt_black"
                    android:textSize="@dimen/_14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5dp"
                android:layout_marginLeft="@dimen/_5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_lbl_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/date"
                    android:textColor="@color/txt_black"
                    android:textSize="@dimen/_14sp" />

                <TextView
                    android:id="@+id/txt_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="end"
                    android:text="@string/_27_jun"
                    android:textColor="@color/txt_black"
                    android:textSize="@dimen/_14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5dp"
                android:layout_marginLeft="@dimen/_5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_lbl_transctype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/transaction_type"
                    android:textColor="@color/txt_black"
                    android:textSize="@dimen/_14sp" />

                <TextView
                    android:id="@+id/txt_transctype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="end"
                    android:text="@string/card"
                    android:textColor="@color/txt_black"
                    android:textSize="@dimen/_14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5dp"
                android:layout_marginLeft="@dimen/_5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_lbl_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/description"
                    android:textColor="@color/txt_black"
                    android:textSize="@dimen/_14sp" />

                <TextView
                    android:id="@+id/txt_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="end"
                    android:text="@string/salary"
                    android:textColor="@color/txt_black"
                    android:textSize="@dimen/_14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5dp"
                android:layout_marginLeft="@dimen/_5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_lbl_credit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/credit"
                    android:textColor="@color/txt_black"
                    android:textSize="@dimen/_14sp" />

                <TextView
                    android:id="@+id/txt_credit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="end"
                    android:text="@string/_0_00_wtplus"
                    android:textColor="@color/txt_black"
                    android:textSize="@dimen/_14sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5dp"
                android:layout_marginLeft="@dimen/_5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_lbl_debit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/debit"
                    android:textColor="@color/txt_black"
                    android:textSize="@dimen/_14sp" />

                <TextView
                    android:id="@+id/txt_debit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="end"
                    android:text="@string/_1500_00"
                    android:textColor="@color/txt_black"
                    android:textSize="@dimen/_14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5dp"
                android:layout_marginLeft="@dimen/_5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="@dimen/_5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_lbl_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/balance"
                    android:textColor="@color/txt_black"
                    android:textSize="@dimen/_14sp" />

                <TextView
                    android:id="@+id/txt_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="end"
                    android:text="@string/_43385_00"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_14sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>