<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_10dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle_corner_bg_solidthicblue"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_10dp"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/txt_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_light"
                    android:maxLines="1"
                    android:text="@string/balance_999_00"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sp" />

                <TextView
                    android:id="@+id/txt_debit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_medium"
                    android:maxLines="1"
                    android:text="@string/_5837_00_color"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sp" />

                <TextView
                    android:id="@+id/txt_credit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_medium"
                    android:maxLines="1"
                    android:text="@string/_0_00_color"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sp" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>