<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:progress="60"
                    app:indicatorColor="@color/primary"
                    app:indicatorSize="@dimen/_45dp"
                    app:trackColor="@color/light_blue"
                    app:trackThickness="10dp" />

                <TextView
                    android:id="@+id/txt_income3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/_10dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_medium"
                    android:maxLines="1"
                    android:padding="@dimen/_5dp"
                    android:text="60%"
                    android:textAllCaps="true"
                    android:textColor="@color/txt_black"
                    android:textSize="10sp" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_expense_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginLeft="@dimen/_10dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/cedint_rent"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sp" />

            <TextView
                android:id="@+id/txt_expense_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginTop="@dimen/_10dp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_medium"
                android:maxLines="1"
                android:text="@string/expenses"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_expense_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/roboto_medium"
                android:gravity="end"
                android:text="@string/_498_10"
                android:textColor="@color/red"
                android:textSize="@dimen/_14sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>